--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Dopefolio</title>
+    <title>Akhil Rachure</title>
+    <link rel="icon" type="image/x-icon" href="./assets/png/face-head.png">
     <meta name="description" content="Portfolio Template for Developer" />
 
     <link rel="stylesheet" href="css/style.css" />
@@ -22,12 +23,12 @@
         <div class="header__logo-container">
           <div class="header__logo-img-cont">
             <img
-              src="./assets/png/john-doe.png"
-              alt="Ram Maheshwari Logo Image"
+              src="./assets/jpeg/profile.jpg"
+              alt="Akhil Rachure Logo Image"
               class="header__logo-img"
             />
           </div>
-          <span class="header__logo-sub">Akhil</span>
+          <span class="header__logo-sub">Akhil Rachure</span>
         </div>
         <div class="header__main">
           <ul class="header__links">
@@ -84,7 +85,7 @@
     </header>
     <section class="home-hero">
       <div class="home-hero__content">
-        <h1 class="heading-primary">Hey, My name is Akhil</h1>
+        <h1 class="heading-primary">Hey, I am Akhil Rachure</h1>
         <div class="home-hero__info">
           <p class="text-primary">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
@@ -188,18 +189,18 @@
           <div class="about__content-skills">
             <h3 class="about__content-title">My Skills</h3>
             <div class="skills">
-              <div class="skills__skill">HTML</div>
-              <div class="skills__skill">CSS</div>
-              <div class="skills__skill">JavaScript</div>
-              <div class="skills__skill">React</div>
-              <div class="skills__skill">SASS</div>
-              <div class="skills__skill">GIT</div>
-              <div class="skills__skill">Shopify</div>
-              <div class="skills__skill">Wordpress</div>
-              <div class="skills__skill">Google ADS</div>
-              <div class="skills__skill">Facebook Ads</div>
-              <div class="skills__skill">Android</div>
-              <div class="skills__skill">IOS</div>
+              <div class="skills__skill">Python</div>
+              <div class="skills__skill">Java</div>
+              <div class="skills__skill">R</div>
+              <div class="skills__skill">MySQL</div>
+              <div class="skills__skill">Tableau</div>
+              <div class="skills__skill">AWS</div>
+              <div class="skills__skill">NLP</div>
+              <div class="skills__skill">GCP</div>
+              <div class="skills__skill">Django</div>
+              <div class="skills__skill">Git</div>
+              <div class="skills__skill">REST APIs</div>
+              <div class="skills__skill">Data Modeling</div>
             </div>
           </div>
         </div>
