--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Akhil Rachure</title>
-    <link rel="icon" type="image/x-icon" href="./assets/png/face-head.png">
-    <meta name="description" content="Portfolio Template for Developer" />
+    <link rel="icon" type="image/x-icon" href="./assets/png/face-head.ico">
+    <meta name="description" content="Data Engineer | Software Engineer | Data/Business Intelligence Engineer" />
 
     <link rel="stylesheet" href="css/style.css" />
 
