initial draft of landing page

--- a/index.html
+++ b/index.html
@@ -88,9 +88,9 @@
         <h1 class="heading-primary">Hey, I am Akhil Rachure</h1>
         <div class="home-hero__info">
           <p class="text-primary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente solutions for
-            complex problems
+            A Data Engineer and Backend Developer,
+            who has worked on the end-to-end Data Science life cycle and SDLC,
+            possesses proven experience in delivering successful projects
           </p>
         </div>
         <div class="home-hero__cta">
@@ -99,7 +99,9 @@
       </div>
       <div class="home-hero__socials">
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://www.linkedin.com/in/akhil-rachure/"
+             target="_blank"
+             class="home-hero__social-icon-link">
             <img
               src="./assets/png/linkedin-ico.png"
               alt="icon"
@@ -108,7 +110,9 @@
           </a>
         </div>
         <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
+          <a href="https://github.com/akhil-rachure"
+             target="_blank"
+             class="home-hero__social-icon-link">
             <img
               src="./assets/png/github-ico.png"
               alt="icon"
@@ -116,36 +120,36 @@
             />
           </a>
         </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/twitter-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a href="#" class="home-hero__social-icon-link">
-            <img
-              src="./assets/png/yt-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
-        <div class="home-hero__social">
-          <a
-            href="#"
-            class="home-hero__social-icon-link home-hero__social-icon-link--bd-none"
-          >
-            <img
-              src="./assets/png/insta-ico.png"
-              alt="icon"
-              class="home-hero__social-icon"
-            />
-          </a>
-        </div>
+<!--        <div class="home-hero__social">-->
+<!--          <a href="#" class="home-hero__social-icon-link">-->
+<!--            <img-->
+<!--              src="./assets/png/twitter-ico.png"-->
+<!--              alt="icon"-->
+<!--              class="home-hero__social-icon"-->
+<!--            />-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="home-hero__social">-->
+<!--          <a href="#" class="home-hero__social-icon-link">-->
+<!--            <img-->
+<!--              src="./assets/png/yt-ico.png"-->
+<!--              alt="icon"-->
+<!--              class="home-hero__social-icon"-->
+<!--            />-->
+<!--          </a>-->
+<!--        </div>-->
+<!--        <div class="home-hero__social">-->
+<!--          <a-->
+<!--            href="#"-->
+<!--            class="home-hero__social-icon-link home-hero__social-icon-link&#45;&#45;bd-none"-->
+<!--          >-->
+<!--            <img-->
+<!--              src="./assets/png/insta-ico.png"-->
+<!--              alt="icon"-->
+<!--              class="home-hero__social-icon"-->
+<!--            />-->
+<!--          </a>-->
+<!--        </div>-->
       </div>
       <div class="home-hero__mouse-scroll-cont">
         <div class="mouse"></div>
@@ -156,8 +160,8 @@
         <h2 class="heading heading-sec heading-sec__mb-med">
           <span class="heading-sec__main">About Me</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here you will find more information about me, what I do, my current skills
+            and my areas of interests.
           </span>
         </h2>
         <div class="about__content">
@@ -166,20 +170,14 @@
             <div class="about__content-details">
               <p class="about__content-details-para">
                 Hey! It's
-                <strong>John Doe</strong>
-                and I'm a <strong> Frontend Web Developer </strong> located in
-                Los Angeles. I've done
-                <strong> remote </strong>
-                projects for agencies, consulted for startups, and collaborated
-                with talented people to create
-                <strong>digital products </strong>
-                for both business and consumer use.
+                <strong>Akhil Rachure</strong>
+                and I'm a <strong> Data Engineer </strong> and
+                <strong> Backend Developer  </strong>
+
               </p>
               <p class="about__content-details-para">
-                I'm a bit of a digital product junky. Over the years, I've used
-                hundreds of web and mobile apps in different industries and
-                verticals. Feel free to
-                <strong>contact</strong> me here.
+
+                <strong></strong>
               </p>
             </div>
             <a href="./#contact" class="btn btn--med btn--theme dynamicBgClr"
@@ -220,18 +218,17 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/ProjectImages/P1NYC.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 1</h3>
+              <h3 class="projects__row-content-title">Data Engineering Pipeline for NYC-TLC Trip Analysis</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Revolutionizing NYC TLC Data Analysis: Python, GCP, and Mage-AI
+                Powering an Advanced Analytics Pipeline for Looker Studio Dashboard Creation.
               </p>
               <a
                 href="./project-1.html"
@@ -244,18 +241,17 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/ProjectImages/P2Amazon.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 2</h3>
+              <h3 class="projects__row-content-title">Sentiment Analysis of Amazon Fine Food Reviews</h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Analyzing the polarity of Amazon fine food reviews through
+                implementation of various Machine Learning Algorithms.
               </p>
               <a
                 href="./project-2.html"
@@ -268,18 +264,17 @@
           <div class="projects__row">
             <div class="projects__row-img-cont">
               <img
-                src="./assets/jpeg/project-mockup-example.jpeg"
+                src="./assets/ProjectImages/P3StockMarket.png"
                 alt="Software Screenshot"
                 class="projects__row-img"
                 loading="lazy"
               />
             </div>
             <div class="projects__row-content">
-              <h3 class="projects__row-content-title">Project 3</h3>
+              <h3 class="projects__row-content-title">Real-Time Stock Market data pipeline </h3>
               <p class="projects__row-content-desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic
-                facilis tempora, explicabo quae quod deserunt eius sapiente
-                praesentium.
+                Building a Dynamic End-to-End Data Pipeline:
+                Real-Time Stock Market Data Engineering with Apache Kafka.
               </p>
               <a
                 href="./project-3.html"
@@ -292,58 +287,57 @@
         </div>
       </div>
     </section>
-    <section id="contact" class="contact sec-pad dynamicBg">
-      <div class="main-container">
-        <h2 class="heading heading-sec heading-sec__mb-med">
-          <span class="heading-sec__main heading-sec__main--lt">Contact</span>
-          <span class="heading-sec__sub heading-sec__sub--lt">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
-          </span>
-        </h2>
-        <div class="contact__form-container">
-          <form action="#" class="contact__form">
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="name">Name</label>
-              <input
-                required
-                placeholder="Enter Your Name"
-                type="text"
-                class="contact__form-input"
-                name="name"
-                id="name"
-              />
-            </div>
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="email">Email</label>
-              <input
-                required
-                placeholder="Enter Your Email"
-                type="text"
-                class="contact__form-input"
-                name="email"
-                id="email"
-              />
-            </div>
-            <div class="contact__form-field">
-              <label class="contact__form-label" for="message">Message</label>
-              <textarea
-                required
-                cols="30"
-                rows="10"
-                class="contact__form-input"
-                placeholder="Enter Your Message"
-                name="message"
-                id="message"
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn--theme contact__btn">
-              Submit
-            </button>
-          </form>
-        </div>
-      </div>
-    </section>
+<!--    <section id="contact" class="contact sec-pad dynamicBg">-->
+<!--      <div class="main-container">-->
+<!--        <h2 class="heading heading-sec heading-sec__mb-med">-->
+<!--          <span class="heading-sec__main heading-sec__main&#45;&#45;lt">Contact</span>-->
+<!--          <span class="heading-sec__sub heading-sec__sub&#45;&#45;lt">-->
+
+<!--          </span>-->
+<!--        </h2>-->
+<!--        <div class="contact__form-container">-->
+<!--          <form action="#" class="contact__form">-->
+<!--            <div class="contact__form-field">-->
+<!--              <label class="contact__form-label" for="name">Name</label>-->
+<!--              <input-->
+<!--                required-->
+<!--                placeholder="Enter Your Name"-->
+<!--                type="text"-->
+<!--                class="contact__form-input"-->
+<!--                name="name"-->
+<!--                id="name"-->
+<!--              />-->
+<!--            </div>-->
+<!--            <div class="contact__form-field">-->
+<!--              <label class="contact__form-label" for="email">Email</label>-->
+<!--              <input-->
+<!--                required-->
+<!--                placeholder="Enter Your Email"-->
+<!--                type="text"-->
+<!--                class="contact__form-input"-->
+<!--                name="email"-->
+<!--                id="email"-->
+<!--              />-->
+<!--            </div>-->
+<!--            <div class="contact__form-field">-->
+<!--              <label class="contact__form-label" for="message">Message</label>-->
+<!--              <textarea-->
+<!--                required-->
+<!--                cols="30"-->
+<!--                rows="10"-->
+<!--                class="contact__form-input"-->
+<!--                placeholder="Enter Your Message"-->
+<!--                name="message"-->
+<!--                id="message"-->
+<!--              ></textarea>-->
+<!--            </div>-->
+<!--            <button type="submit" class="btn btn&#45;&#45;theme contact__btn">-->
+<!--              Submit-->
+<!--            </button>-->
+<!--          </form>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--    </section>-->
     <footer class="main-footer">
       <div class="main-container">
         <div class="main-footer__upper">
@@ -352,59 +346,53 @@
               <span>Social</span>
             </h2>
             <div class="main-footer__social-cont">
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/akhil-rachure/">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/linkedin-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
+              <a target="_blank" rel="noreferrer" href="https://github.com/akhil-rachure">
                 <img
                   class="main-footer__icon"
                   src="./assets/png/github-ico.png"
                   alt="icon"
                 />
               </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/twitter-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon"
-                  src="./assets/png/yt-ico.png"
-                  alt="icon"
-                />
-              </a>
-              <a target="_blank" rel="noreferrer" href="#">
-                <img
-                  class="main-footer__icon main-footer__icon--mr-none"
-                  src="./assets/png/insta-ico.png"
-                  alt="icon"
-                />
-              </a>
+<!--              <a target="_blank" rel="noreferrer" href="#">-->
+<!--                <img-->
+<!--                  class="main-footer__icon"-->
+<!--                  src="./assets/png/twitter-ico.png"-->
+<!--                  alt="icon"-->
+<!--                />-->
+<!--              </a>-->
+<!--              <a target="_blank" rel="noreferrer" href="#">-->
+<!--                <img-->
+<!--                  class="main-footer__icon"-->
+<!--                  src="./assets/png/yt-ico.png"-->
+<!--                  alt="icon"-->
+<!--                />-->
+<!--              </a>-->
+<!--              <a target="_blank" rel="noreferrer" href="#">-->
+<!--                <img-->
+<!--                  class="main-footer__icon main-footer__icon&#45;&#45;mr-none"-->
+<!--                  src="./assets/png/insta-ico.png"-->
+<!--                  alt="icon"-->
+<!--                />-->
+<!--              </a>-->
             </div>
           </div>
           <div class="main-footer__row main-footer__row-2">
-            <h4 class="heading heading-sm text-lt">John Doe</h4>
+            <h4 class="heading heading-sm text-lt">Akhil Rachure</h4>
             <p class="main-footer__short-desc">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit facilis
-              tempora explicabo quae quod deserunt
+              A Data Engineer and Backend Developer,
+            who has worked on the end-to-end Data Science life cycle and SDLC,
+            possesses proven experience in delivering successful projects
             </p>
           </div>
         </div>
 
-        <!-- If you give me some credit or shoutout here by linking to my website, then it will be a big thing for me and will help me a lot :) -->
-        <div class="main-footer__lower">
-          &copy; Copyright 2021. Made by
-          <a rel="noreferrer" target="_blank" href="https://rammaheshwari.com"
-            >Ram Maheshwari</a
-          >
-        </div>
       </div>
     </footer>
 
