--- a/index.html
+++ b/index.html
@@ -209,8 +209,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis
-            tempora explicabo quae quod deserunt eius sapiente
+            Here, you will find some of the projects I have worked on, along with the links to the code.
           </span>
         </h2>
 
@@ -287,6 +286,20 @@
         </div>
       </div>
     </section>
+    <section id="contact" class="contact sec-pad dynamicBg">
+      <div class="main-container">
+        <h2 class="heading heading-sec heading-sec__mb-med">
+          <span class="heading-sec__main heading-sec__main--lt">Contact</span>
+          <span class="heading-sec__sub heading-sec__sub--lt">
+            The best way to contact me is by reaching out to me on
+            <u><strong><a href="https://www.linkedin.com/in/akhil-rachure/">Linkedin</a></strong></u>
+          </span>
+        </h2>
+
+      </div>
+    </section>
+
+
 <!--    <section id="contact" class="contact sec-pad dynamicBg">-->
 <!--      <div class="main-container">-->
 <!--        <h2 class="heading heading-sec heading-sec__mb-med">-->
