--- a/project-1.html
+++ b/project-1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Case Study of NYC-TLC Trip Analysis</title>
+    <link rel="icon" type="image/x-icon" href="./assets/png/face-head.ico">
     <meta name="description" content="Case study page of Project" />
 
     <link rel="stylesheet" href="css/style.css" />
